# mancos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  licenses.txt
.claude/: PLAN.md
.github/workflows/: ci.yml  pages.yml  release.yml
cmake/: lua.cmake  ortools_glop.cmake
patches/: or-tools-v9.15-static-deps.patch
scripts/: bootstrap.sh  build-native.sh  build-wasm.sh  build-web.sh  promote-beta.sh
scripts/release/: BUNDLER-README.md  mancos-bundler.mjs
solver-wasm/: README.md
solver-wasm/demo/: build-and-run.sh  yafc_lp_demo.cc
src/: CMakeLists.txt
src/tools/: bundler_main.cc
src/web/: bundler_web_api.cc  web_api.cc
src/yafc/analysis/: automation_analysis.cc  automation_analysis.h  cost_analysis.cc  cost_analysis.h  dependencies.cc  dependencies.h  dependency_node.cc  dependency_node.h  milestones.cc  milestones.h  technology_science_analysis.cc  technology_science_analysis.h
src/yafc/lua/: lua_vm.cc  lua_vm.h
src/yafc/model/: bits.h  blueprint.cc  blueprint.h  data_classes.cc  data_classes.h  database.cc  database.h  graph.h  production_table.cc  production_table.h  production_table_solver.cc  production_table_solver.h  recipe_parameters.cc  recipe_parameters.h
src/yafc/parser/: data_deserializer.cc  data_deserializer.h  data_deserializer_entity.cc  data_deserializer_recipes.cc  factorio_data_source.cc  factorio_data_source.h  locale.cc  locale.h  lua_context.cc  lua_context.h  property_tree.cc  property_tree.h  zip_archive.cc  zip_archive.h
src/yafc/serialization/: database_dump.cc  database_dump.h  icon_scale.cc  icon_scale.h  serialization.cc  serialization.h
src/yafc/solver/: lp.cc  lp.h
tests/: CMakeLists.txt  blueprint_test.cc  cost_analysis_test.cc  data_stage_test.cc  database_test.cc  graph_test.cc  lead_golden_test.cc  lua_test.cc  milestones_test.cc  production_table_solver_test.cc  production_table_test.cc  serialization_test.cc  solver_test.cc  synthetic_bundle_test.cc  tech_science_test.cc  zip_mod_test.cc
web/: app.js  bundler-worker.js  bundler.html  bundler.js  bundler_pre.js  index.html  manifest.webmanifest  sw.js  worker.js
